[gd_scene load_steps=29 format=2]

[ext_resource path="res://Assets/Sprites/Bird/bird-spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies/Umbrella/Umbrella.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Enemies/Umbrella/UmbrellaStateIdle.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Interface/Enemy_Health.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Entities/Attacks/BaseAttack.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Enemies/Generic/EnemyStateAlert.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Enemies/Umbrella/UmbrellaStateRangeAttack.gd" type="Script" id=7]
[ext_resource path="res://Scripts/FSM/FSMController.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Enemies/Generic/EnemyStateHurt.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Enemies/Umbrella/UmbrellaStateChase.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Enemies/BaseEnemy.gd" type="Script" id=11]

[sub_resource type="CircleShape2D" id=97]
radius = 512.0

[sub_resource type="CircleShape2D" id=96]
radius = 32.0

[sub_resource type="CircleShape2D" id=99]
radius = 300.0

[sub_resource type="CircleShape2D" id=98]
radius = 400.0

[sub_resource type="CapsuleShape2D" id=109]
radius = 24.5321
height = 85.3061

[sub_resource type="CircleShape2D" id=110]
radius = 53.0094

[sub_resource type="Shader" id=100]
code = "shader_type canvas_item;

uniform bool flash = false;
uniform vec4 flash_color : hint_color = vec4(1.0);
uniform vec4 line_color : hint_color = vec4(1.0);
uniform float line_thickness : hint_range(0, 10) = 1.0;

const vec2 OFFSETS[8] = {
	vec2(-1, -1), vec2(-1, 0), vec2(-1, 1), vec2(0, -1), vec2(0, 1), 
	vec2(1, -1), vec2(1, 0), vec2(1, 1)
};

void fragment() {
	//OUTLINE
	vec2 size = TEXTURE_PIXEL_SIZE * line_thickness;
	float outline = 0.0;
	for (int i = 0; i < OFFSETS.length(); i++) {
		outline += texture(TEXTURE, UV + size * OFFSETS[i]).a;
	}
	outline = min(outline, 1.0);
	
	//GET THE BASE
	vec4 color = texture(TEXTURE, UV);
	
	//FLASH
	vec4 new_color = color;
	if (flash == true)
	{
		new_color = vec4(flash_color.xyz, color.a); 
	}
	
	COLOR = mix(new_color, line_color, outline - new_color.a);
}"

[sub_resource type="ShaderMaterial" id=95]
shader = SubResource( 100 )
shader_param/flash = false
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/line_color = Color( 0.988235, 0.847059, 0.215686, 0 )
shader_param/line_thickness = 6.0

[sub_resource type="Animation" id=101]
resource_name = "FLY_CLOSED"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=102]
resource_name = "FLY_OPEN"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30 ]
}

[sub_resource type="Animation" id=111]
resource_name = "IDLE"
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 14, 11 ]
}

[sub_resource type="Animation" id=103]
resource_name = "IDLE_CLOSED"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=104]
resource_name = "IDLE_OPEN"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=105]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SocketMuzzle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -54.2, 12 ) ]
}

[sub_resource type="Animation" id=106]
resource_name = "SPIN"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 54, 55, 56, 57, 58, 59, 60, 61, 62 ]
}

[sub_resource type="Animation" id=107]
resource_name = "TO_CLOSED"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49, 50 ]
}

[sub_resource type="Animation" id=108]
resource_name = "TO_OPEN"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41 ]
}

[node name="E_Umbrella" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 2
script = ExtResource( 2 )
base_speed = 400.0
has_ranged_attack = true
melee_attack_range = 200.0
ranged_attack_range = 375.0

[node name="PhysicsCollider" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -61 )
polygon = PoolVector2Array( 0, 76, 16, 74, 28, 68, 32, 60, 28, 52, 16, 46, 0, 44, -17, 46, -28, 52, -32, 60, -28, 68, -16, 74 )

[node name="NearbyEntities" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="NearbyEntities"]
scale = Vector2( 1, 0.5 )
shape = SubResource( 97 )

[node name="EntityCollider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntityCollider"]
scale = Vector2( 1, 0.5 )
shape = SubResource( 96 )

[node name="RangedAttack" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Sense" type="CollisionShape2D" parent="RangedAttack"]
scale = Vector2( 2, 1 )
shape = SubResource( 99 )

[node name="IdleRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Sense" type="CollisionShape2D" parent="IdleRadius"]
scale = Vector2( 2, 1 )
shape = SubResource( 98 )

[node name="FlipComponents" type="Node2D" parent="."]

[node name="HitBox" type="Area2D" parent="FlipComponents"]
position = Vector2( -6.8, -34 )
collision_layer = 0
collision_mask = 32
script = ExtResource( 5 )
base_speed = 0.0
allied_class = ExtResource( 11 )
persistent = true
die_on_pierce = false
camera_shake = 64.0
max_pierce = 10000
should_forget_entities = true
entity_forget_time = 0.2

[node name="HitCollider" type="CollisionShape2D" parent="FlipComponents/HitBox"]
position = Vector2( -1.2, 4 )
rotation = -1.8326
shape = SubResource( 109 )
disabled = true

[node name="HurtBox" type="Area2D" parent="FlipComponents"]
position = Vector2( -6.8, -34 )
collision_layer = 32
collision_mask = 0

[node name="HurtCollider" type="CollisionShape2D" parent="FlipComponents/HurtBox"]
position = Vector2( 1.8, -3 )
shape = SubResource( 110 )

[node name="Visual" type="Node2D" parent="FlipComponents"]

[node name="Sprite" type="Sprite" parent="FlipComponents/Visual"]
material = SubResource( 95 )
position = Vector2( -3, -36 )
scale = Vector2( 0.346525, 0.346525 )
texture = ExtResource( 1 )
hframes = 9
vframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="FlipComponents/Visual"]
anims/FLY_CLOSED = SubResource( 101 )
anims/FLY_OPEN = SubResource( 102 )
anims/IDLE = SubResource( 111 )
anims/IDLE_CLOSED = SubResource( 103 )
anims/IDLE_OPEN = SubResource( 104 )
anims/RESET = SubResource( 105 )
anims/SPIN = SubResource( 106 )
anims/TO_CLOSED = SubResource( 107 )
anims/TO_OPEN = SubResource( 108 )

[node name="SocketMuzzle" type="Node2D" parent="FlipComponents/Visual"]
position = Vector2( -54.2, 12 )

[node name="ProgressBar" parent="." instance=ExtResource( 4 )]
margin_left = -23.0
margin_top = -95.0
margin_right = 17.0
margin_bottom = -86.0

[node name="FSMController" type="Node2D" parent="."]
script = ExtResource( 8 )
root_state = NodePath("UmbrellaStateIdle")
animation_player = NodePath("../FlipComponents/Visual/AnimationPlayer")

[node name="UmbrellaStateIdle" type="Node2D" parent="FSMController"]
script = ExtResource( 3 )
global_animation_speed_multiplier = 2.0
wander_radius = 128.0
walk_speed_multiplier = 2.0
min_wander_delay = 0.1
max_wander_delay = 1.0
min_wander_distance_fac = 0.25

[node name="EnemyStateHurt" type="Node2D" parent="FSMController"]
script = ExtResource( 9 )

[node name="UmbrellaStateChase" type="Node2D" parent="FSMController"]
script = ExtResource( 10 )

[node name="UmbrellaStateRangedAttack" type="Node2D" parent="FSMController"]
script = ExtResource( 7 )

[node name="EnemyStateAlert" type="Node2D" parent="FSMController"]
script = ExtResource( 6 )
animation_name = "TO_OPEN"
